# abalone

./: AIPlayer.cpp  AIPlayer.h  AbaloneBoard.h  AbalonePlayer.h  BelgianDaisyPlacer.cpp  BelgianDaisyPlacer.h  BoardFactory.cpp  BoardFactory.h  BoardPrinterConsole.cpp  BoardPrinterConsole.h  DefaultPlacer.cpp  DefaultPlacer.h  HexDefaultPlacer.cpp  HexDefaultPlacer.h  HumanConsolePlayer.cpp  HumanConsolePlayer.h  IAbaloneBoard.h  IPlacer.h  MoveRecorder.cpp  MoveRecorder.h  OffBoardPlacer.cpp  OffBoardPlacer.h  abalone.pro  main.cpp  nice_games_to_implement  original_makeMove.txt  terminal_colors.h  tinyxml2.cpp  tinyxml2.h
ui/: abalone.css  abalone_ext.cpp  abalone_main.html  abalone_preferences.html  create_run_script.sh  meson.build
